Add bib and add refs

--- a/Sources/Background/Nature_of_Light/Polarization_of_EM_Waves.tex
+++ b/Sources/Background/Nature_of_Light/Polarization_of_EM_Waves.tex
@@ -70,7 +70,7 @@ Starting from the equation for the polarization ellipse, taking the time average
 the time averages are calculated as [TODO Fix this equation]
 %
 \begin{align}
-<E_x (t)^2> =   lim_{T\to\infty}\int{0}^{2\pi} E_{0x} cos(\tau)  d\tau=\frac{1}{2} E_{0x}^2
+    <E_x (t)^2> = lim_{T \rightarrow \infty} \int_{0}^{2\pi} E_{0x} cos(\tau)  d\tau=\frac{1}{2} E_{0x}^2
 \end{align}
 %
 and similarly
