--- a/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
+++ b/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
@@ -45,6 +45,7 @@ The Brewster angle is a special case where the $P$ polarization state is complet
 The Mueller matrix formulation for reflection and transmission reduces to the form of a linear polarizer for ideal surfaces.  It has been shown in [14] that the equation for a reflected beam off of a perfectly smooth dielectric surface is
 %
 \begin{align}
+    \begin{split}
     \begin{bmatrix}
         S_{0r} \\
         S_{1r} \\
@@ -52,14 +53,15 @@ The Mueller matrix formulation for reflection and transmission reduces to the fo
         S_{3r}
     \end{bmatrix}
     =
-% TODO fix error here
-%    \frac{1}{2}(\frac{tan(\theta_{_})}{sin(\theta_{+})})^2
-%    \begin{bmatrix}
-%        cos^2(\theta_{_}) + cos^2(\theta_+) & cos^2(\theta_{_}) - cos^2(\theta_+) & 0 & 0 \\
-%        cos^2(\theta_{_}) - cos^2(\theta_+) & cos^2(\theta_{_}) - cos^2(\theta_+) & 0 & 0 \\
-%        0 & 0 & -2cos(\theta_{_})cos(\theta_+) & 0 \\
-%        0 & 0 & 0 & -2cos(\theta_{_})cos(\theta_{+})
-%    \end{bmatrix}
+    \frac{1}{2}(\frac{tan(\theta_{-})}{sin(\theta_{+})})^2 \\
+    \small
+    \begin{bmatrix}
+       cos^2(\theta_{-}) + cos^2(\theta_{+}) & cos^2(\theta_{-}) - cos^2(\theta_{+}) & 0 & 0 \\
+        cos^2(\theta_{-}) - cos^2(\theta_{+}) & cos^2(\theta_{-}) - cos^2(\theta_{+}) & 0 & 0 \\
+        0 & 0 & -2cos(\theta_{-})cos(\theta_{+}) & 0 \\
+        0 & 0 & 0 & -2cos(\theta_{-})cos(\theta_{+})
+    \end{bmatrix}
+    \end{split}
 \end{align}
 %
 where $\theta_{\pm}=\theta_i \pm \theta_r$. This is identical to the form of a linear diattenuator or polarizer.
