--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -13,7 +13,7 @@
   \vspace{0.5cm}
 \end{center}
 
-\noindent The natural environment contains a finite amount of resources.  It provides a limiting principle to the uncontrolled, exponential capital growth of consumerism.  If ancient civilization describes itself as a political social animal, modern culture must append the term consumer. Consumption of these resources is occurring at an increasing rate, as the world’s population increases, putting a strain on the modern agricultural system.  In 1798 Thomas Malthus wrote in his “Essay on the Principal of Population” that the standard of living would eventually be undermined as population grows exponentially, and food supplies grow geometrically.  He predicted this would eventually lead to mass food shortages and famine.
+\noindent The natural environment\cite{knuthwebsite} contains a finite amount of resources.  It provides a limiting principle to the uncontrolled, exponential capital growth of consumerism.  If ancient civilization describes itself as a political social animal, modern culture must append the term consumer. Consumption of these resources is occurring at an increasing rate, as the world’s population increases, putting a strain on the modern agricultural system.  In 1798 Thomas Malthus wrote in his “Essay on the Principal of Population” that the standard of living would eventually be undermined as population grows exponentially, and food supplies grow geometrically.  He predicted this would eventually lead to mass food shortages and famine.
 
 Today precision agriculture attempts to reduce the number of inputs to a farm, while maximizing its outputs.  Its goal is the management of agricultural inputs on an individual plant basis.  Minimizing water and fertilizer inputs are of central importance to this problem.
 
